Cleaning up garbage and quarkus migration